--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,44 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.testng:testng:7.1.0'
 
-    implementation 'ch.qos.logback:logback-classic:1.4.0'
+    implementation 'ch.qos.logback:logback-classic:1.4.0' // для бэклогов, надо почитать документацию на их оф сайте
+    implementation 'com.github.stephenc.monte:monte-screen-recorder:0.7.7.0' // для скринкастов (записи экрана)
 }
 
 test {
     useTestNG()
+}
+
+task testy (type: Test) {
+    useTestNG()
+    if (project.hasProperty('browser')){
+        systemProperty 'browser'. "${browser}"
+    }
+}
+
+task testUser (type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testngUser.xml'
+    }
+    if (project.hasProperty('browser')){
+        systemProperty 'browser'. "${browser}"
+    }
+}
+
+task testSmoky (type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testngSmoky.xml'
+    }
+    if (project.hasProperty('browser')){
+        systemProperty 'browser'. "${browser}"
+    }
+}
+
+task testExclude (type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testngExcludeName.xml'
+    }
+    if (project.hasProperty('browser')){
+        systemProperty 'browser'. "${browser}"
+    }
 }
